Se corrige bucle en Dockerfile y se añade versión de Docker Compose

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 COPY . / app/
 
-CMD bash -c "while tue; do sleep 1; done"
+CMD bash -c "while true; do sleep 1; done"
